# files

./: README.md  io.github.leolost2605.files.yml  meson.build
data/: Application.css  files.desktop.in  files.gresource.xml  files.gschema.xml  files.metainfo.xml.in  meson.build
po/extra/: POTFILES
src/: Application.vala  meson.build
src/Model/Files/: Directory.vala  Document.vala  FileBase.vala  FileModel.vala
src/Model/Operations/: ConflictableOperation.vala  CopyOperation.vala  MakeDirectoryOperation.vala  MoveOperation.vala  Operation.vala  OperationManager.vala  RenameOperation.vala  TrashOperation.vala
src/UI/: ActionHandler.vala  FileView.vala  HeaderBar.vala  MainView.vala  MainWindow.vala  Utils.vala
src/UI/Dialogs/: NewFolderDialog.vala  RenameDialog.vala
src/UI/FileView/: CellBase.vala  FileView.vala  FileViewOperationManager.vala  FileViewState.vala
src/UI/FileView/GridView/: GridCell.vala  GridView.vala
src/UI/FileView/ListView/: FileCell.vala  ListView.vala
src/UI/ListView/: FileRow.vala  ListView.vala
src/UI/SideBar/: FileRow.vala  SideBar.vala  Sidebar.vala  SidebarSection.vala
